Fixed navigation so it shows "hamburger stack" navigation icon on narrow width devices

--- a/ContosoUniversityAngular/src/styles.scss
+++ b/ContosoUniversityAngular/src/styles.scss
@@ -15,7 +15,7 @@ $font-size-h6: 0.8rem !default; // 1
 
 /* Extra padding to keep navigation bar from overlapping the rest of the content below it */
 body {
-	padding-top: 65px !important;
+	padding-top: 5em !important;
 }
 
 /* ngx-toastr */
